name:                external-sorting
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     ExternalSorting
  -- other-modules:
  build-depends:
    base >=4.11 && <4.12,
    filepath

  ghc-options: -Wall -O2

  hs-source-dirs:      src
  default-language:    Haskell2010

executable gen-test-file
  main-is: utils/GenTestFile.hs
  build-depends: base, random
  ghc-options: -Wall
  default-language: Haskell2010

executable sort-external
  main-is: utils/SortExternal.hs
  build-depends: base, external-sorting
  ghc-options: -Wall -O2 -rtsopts
  default-language: Haskell2010

executable sort-simple
  main-is: utils/SortSimple.hs
  build-depends: base
  ghc-options: -Wall -O2 -rtsopts
  default-language: Haskell2010
